Se elimino archivos innesesarios y el preloader

--- a/index.html
+++ b/index.html
@@ -11,23 +11,14 @@
     <link rel="stylesheet" href="Estilos/estilos.css">
 </head>
 <body>
-    <div id="preloader">
-        <div>
-            <div class="spinner">
-                <div class="double-bounce1"></div>
-                <div class="double-bounce2"></div>
-            </div>
-            <span>Cargando...</span>
-        </div>
-    </div>
     <!--Formulario de Logeo-->
     <form action="">
         <center><img class="logo" src="./img/core-img/logo.png"></center>
         <div class="form-group">
-            <input type="text" name="" id="" placeholwder="Código">
+            <input type="text" name="" id="" placeholder="Ingrese Código">
         </div>
         <div class="form-group">
-            <input type="password" name="" id="" placeholder="Contraseña">
+            <input type="password" name="" id="" placeholder="Ingrese Contraseña">
         </div>
         <input type="submit" value="Iniciar Sesión">
         <center><a class="olvido" href="#">¿Olvido su Contraseña?</a></center>
